--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
             <button class="filter-btn" data-filter="العيون">العيون</button>
             <button class="filter-btn" data-filter="العظام">العظام</button>
             <button class="filter-btn" data-filter="المسالك">المسالك</button>
+            <button class="filter-btn" data-filter="الاطفال">الاطفال</button>
+
         </div>
         
         <div id="doctorsGrid" class="doctors-grid"></div>
@@ -333,7 +335,7 @@
             </div>
             <div class="footer-bottom">
                 <p>جميع الحقوق محفوظة &copy; 2026 منصة دليلك الطبي</p>
-                <p class="footer-note">تم التطوير بـ ❤️ من أجل العراق</p>
+                <p class="footer-note">تم التطوير بـ❤️ من أجل العراق</p>
             </div>
         </div>
     </footer>
